--- a/package.json
+++ b/package.json
@@ -1,1 +1,46 @@
-
+{
+  "name": "test",
+  "version": "1.0.0",
+  "description": "My boilerplate project for Node.js / React.js development",
+  "main": "index.js",
+  "scripts": {
+    "build-js": "browserify public/js/app.js -o public/build/app.js",
+    "build-min-js": "browserify public/js/app.js | uglifyjs -o public/build/app.min.js",
+    "watch-js": "nodemon -e js -w public/js -x 'npm run build-js'",
+    "build-sass": "node-sass public/sass/main.scss public/build/main.css",
+    "build-min-sass": "node-sass public/sass/main.scss | cleancss -o public/build/main.min.css",
+    "watch-sass": "nodemon -e scss -w public/sass -x 'npm run build-sass'",
+    "build": "npm run build-js & npm run build-sass",
+    "watch": "npm run watch-js & npm run watch-sass",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "async": "^0.9.0",
+    "babelify": "^5.0.4",
+    "body-parser": "^1.9.0",
+    "colors": "^1.0.2",
+    "cors": "^2.4.2",
+    "envify": "^3.4.0",
+    "express": "^4.9.5",
+    "method-override": "^2.2.0",
+    "moment": "^2.8.3",
+    "morgan": "^1.3.2",
+    "node-logentries": "^0.1.4",
+    "react": "^0.13.1",
+    "respawn": "^1.0.1"
+  },
+  "devDependencies": {
+    "browserify": "^9.0.7",
+    "clean-css": "^3.1.9",
+    "node-sass": "^2.1.1",
+    "uglifyjs": "^2.4.10"
+  },
+  "browserify": {
+    "transform": [
+      "babelify",
+      "envify"
+    ]
+  },
+  "author": "alexander.beletsky@gmail.com",
+  "license": "MIT"
+}
